# fatrs

./: ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  PERFORMANCE_ROADMAP.md  README.md  RP_ISSUES.md  RUNTIME_BENCHMARKS.md  TODO.md
.claude/: settings.local.json
block-device-adapters/: Cargo.toml
block-device-adapters/src/: buf_stream.rs  stream_slice.rs
block-device-driver/: Cargo.toml
embedded-fatfs/: Cargo.toml
embedded-fatfs-mount/: Cargo.toml  IMPLEMENTATION.md  README.md
embedded-fatfs-mount/src/: fuse_adapter.rs  lib.rs  main.rs
embedded-fatfs/examples/: create_txn_safe_image.rs
embedded-fatfs/src/: boot_sector.rs  dir.rs  dir_entry.rs  error.rs  file.rs  fs.rs  io.rs  lib.rs  transaction.rs
embedded-fatfs/tests/: transaction_safety.rs
fatrs/: Cargo.toml
fatrs-adapters-alloc/: Cargo.toml
fatrs-adapters-alloc/src/: large_page_buffer.rs  large_page_stream.rs  lib.rs
fatrs-adapters-core/: Cargo.toml
fatrs-adapters-core/src/: buf_stream.rs  io_helpers.rs  lib.rs  page_buffer.rs  page_stream.rs
fatrs-adapters/src/infrastructure/streaming/: embedded_io_impl.rs  stack_page_stream.rs
fatrs-block-device/: Cargo.toml
fatrs-block-device/src/: lib.rs
fatrs-block-platform/: Cargo.toml
fatrs-block-platform/src/: lib.rs  linux.rs  macos.rs  rpflash.rs  stream.rs  windows.rs
fatrs-cli/: Cargo.toml
fatrs-cli/src/: app.rs  block_device.rs  cli.rs  fatrs.rs  fuse_adapter.rs  io_wrapper.rs  lib.rs  mount_main.rs  tui_main.rs
fatrs-fuse/: Cargo.toml
fatrs-fuse/src/: lib.rs
fatrs-sdspi/: Cargo.toml
fatrs-sdspi/src/: lib.rs
fatrs/benches/: alloc_only_runtime.rs  cluster_allocation.rs  embassy_unbuffered.rs  page_buffer.rs  random_access.rs  runtime_comparison.rs  sequential_io.rs  unbuffered_io.rs
fatrs/src/: boot_sector.rs  cluster_bitmap.rs  dir.rs  dir_cache.rs  dir_entry.rs  error.rs  fat_cache.rs  file.rs  file_locking.rs  fs.rs  lib.rs  multi_cluster_io.rs  send_bounds.rs  share.rs  table.rs  time.rs  transaction.rs
fatrs/tests/: concurrent_access.rs  embassy_integration.rs  send_bounds.rs
sdspi/: Cargo.toml
