[package]
name = "embedded-fatfs-mount"
version = "0.1.0"
edition = "2024"
authors = ["Emil Lindfors"]
description = "FUSE mount tool for embedded-fatfs with transaction-safe support"
license = "MIT"
repository = "https://github.com/mabezdev/embedded-fatfs"
keywords = ["fat", "filesystem", "fuse", "mount", "embedded"]
categories = ["filesystem", "command-line-utilities"]

[dependencies]
embedded-fatfs = { path = "../embedded-fatfs", features = ["transaction-safe", "std", "alloc", "lfn", "unicode", "log", "chrono"] }
embedded-io-adapters = { version = "0.6", features = ["tokio-1"] }
embedded-io-async = "0.6"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"
clap = { version = "4", features = ["derive"] }
chrono = "0.4"

# FUSE support (Unix-like systems)
[target.'cfg(unix)'.dependencies]
fuser = "0.14"
libc = "0.2"

# Windows FUSE support (WinFsp) - optional, requires WinFsp installed
[target.'cfg(windows)'.dependencies]
winfsp = { version = "0.11", optional = true }

[features]
default = []
windows-fuse = ["winfsp"]

[[bin]]
name = "embedded-fatfs-mount"
path = "src/main.rs"
