[package]
name = "fatrs-adapters-alloc"
version = "0.4.0"
edition = "2024"
repository = "https://github.com/EmilLindfors/fatrs"
readme = "README.md"
rust-version = "1.85"
keywords = ["block", "device", "alloc", "adapter", "filesystem"]
categories = ["filesystem", "no-std", "embedded"]
license = "MIT"
description = """
Heap-allocated block device adapters for fatrs - LargePageBuffer, LargePageStream for SSDs
"""

[dependencies]
aligned = "0.4.2"
embedded-io-async = "0.7"
fatrs-block-device = { version = "0.4", path = "../fatrs-block-device" }
fatrs-adapters-core = { version = "0.4", path = "../fatrs-adapters-core" }

log = { version = "0.4", optional = true }
defmt = { version = "1.0", optional = true }

[dev-dependencies]
env_logger = "0.11"
tokio = { version = "1", default-features = false, features = ["fs", "rt-multi-thread", "macros", "io-util"] }
anyhow = "1"
embedded-io-adapters = { version = "0.7", package = "embedded-io-adapters", features = ["tokio-1"] }

[features]
default = []
std = []  # For std::error::Error impl
log = ["dep:log"]
defmt = ["dep:defmt"]
