[package]
name = "fatrs-adapters-core"
version = "0.3.0"
edition = "2024"
repository = "https://github.com/EmilLindfors/fatrs"
readme = "README.md"
rust-version = "1.85"
keywords = ["block", "device", "no_std", "adapter", "filesystem"]
categories = ["filesystem", "no-std", "embedded"]
license = "MIT"
description = """
Stack-allocated block device adapters for fatrs - BufStream, PageBuffer, PageStream, StreamSlice
"""

[dependencies]
aligned = "0.4.2"
embedded-io-async = "0.7"
fatrs-block-device = { version = "0.3", path = "../fatrs-block-device" }

log = { version = "0.4", optional = true }
defmt = { version = "1.0", optional = true }

[dev-dependencies]
env_logger = "0.11"
tokio = { version = "1", default-features = false, features = ["fs", "rt-multi-thread", "macros", "io-util"] }
anyhow = "1"
embedded-io-adapters = { version = "0.7", package = "embedded-io-adapters", features = ["tokio-1"] }

[features]
default = []
std = ["embedded-io-async/std"]
log = ["dep:log"]
defmt = ["dep:defmt"]
