[package]
name = "fatrs-block-device"
version = "0.4.0"
edition = "2024"
repository = "https://github.com/EmilLindfors/fatrs"
readme = "README.md"
rust-version = "1.85"
keywords = ["block", "device", "no_std", "fat", "filesystem"]
categories = ["filesystem", "no-std", "embedded"]
license = "MIT"
description = """
Core BlockDevice trait for fatrs - async block device abstraction for embedded and std environments
"""

[dependencies]
aligned = "0.4.2"
trait-variant = "0.1"
