[package]
name = "fatrs-cli"
version = "0.4.0"
edition = "2024"
authors = ["Emil Lindfors"]
description = "CLI tools for fatrs - command-line utilities, TUI browser, and FUSE mount"
license = "MIT"
repository = "https://github.com/EmilLindfors/fatrs"
keywords = ["fat", "filesystem", "cli", "fuse", "tui"]
categories = ["filesystem", "command-line-utilities"]
rust-version = "1.85"

[dependencies]
# Core fatrs ecosystem
fatrs = { path = "../fatrs", features = ["transaction-safe", "std", "alloc", "lfn", "unicode", "log", "chrono"] }
fatrs-adapters-core = { path = "../fatrs-adapters-core", features = ["std"] }
fatrs-adapters-alloc = { path = "../fatrs-adapters-alloc" }
fatrs-block-device = { path = "../fatrs-block-device" }
fatrs-block-platform = { path = "../fatrs-block-platform", features = ["windows"] }
fatrs-fuse = { path = "../fatrs-fuse", optional = true }

# I/O adapters
embedded-io-adapters = { version = "0.7", features = ["tokio-1"] }
embedded-io-async = "0.7"
aligned = "0.4.2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI/TUI
clap = { version = "4", features = ["derive"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"
chrono = "0.4"

# TUI dependencies
ratatui = "0.29"
crossterm = "0.28"
image = "0.25"
ratatui-image = "1.0"

# Windows dependencies
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_Storage_FileSystem", "Win32_Foundation", "Win32_System_SystemServices", "Win32_System_IO"] }

[features]
default = []
fuse = ["fatrs-fuse"]
unix-fuse = ["fuse", "fatrs-fuse/unix-fuse"]
windows-fuse = ["fuse", "fatrs-fuse/windows-fuse"]

[[bin]]
name = "fatrs"
path = "src/fatrs.rs"

[[bin]]
name = "fatrs-tui"
path = "src/tui_main.rs"

[[bin]]
name = "fatrs-mount"
path = "src/mount_main.rs"
required-features = ["unix-fuse"]
