[package]
name = "fatrs-fuse"
version = "0.4.0"
edition = "2024"
authors = ["Emil Lindfors"]
description = "FUSE filesystem adapter for fatrs - mount FAT images with transaction-safe support"
license = "MIT"
repository = "https://github.com/EmilLindfors/fatrs"
keywords = ["fat", "filesystem", "fuse", "mount"]
categories = ["filesystem"]
rust-version = "1.85"

[dependencies]
# Core fatrs
fatrs = { path = "../fatrs", features = ["std", "alloc", "lfn", "unicode"] }

# FUSE dependencies (Unix)
[target.'cfg(unix)'.dependencies]
fuser = { version = "0.14", optional = true }
libc = { version = "0.2", optional = true }

# Windows FUSE support (WinFsp) - optional
[target.'cfg(windows)'.dependencies]
winfsp = { version = "0.11", optional = true }

# Async runtime
tokio = { version = "1", features = ["rt", "sync"] }

# Logging
log = "0.4"

# Time handling
chrono = "0.4"

[features]
default = []
unix-fuse = ["fuser", "libc"]
windows-fuse = ["winfsp"]

[package.metadata.docs.rs]
all-features = true
