[package]
name = "fatrs"
version = "0.4.0"
edition = "2024"
repository = "https://github.com/EmilLindfors/fatrs"
readme = "README.md"
rust-version = "1.85"
keywords = ["fat", "filesystem", "no_std", "embedded", "async"]
categories = ["filesystem", "no-std", "embedded"]
license = "MIT"
description = """
Async FAT filesystem library for embedded and desktop Rust.
"""
exclude = [
    "resources/*",
]

[features]
# Use Rust std library
std = ["embedded-io-async/std", "dep:tokio", "dep:embedded-io-adapters"]
# LFN (Long File Name) support
lfn = []
# Use dynamic allocation. When used without std please enable core_io/collections
alloc = []
# Full Unicode support. Disabling it reduces code size by avoiding Unicode-aware character case conversion
unicode = []
# enable log support
log = ["dep:log"]
# enable defmt support
defmt = ["dep:defmt"]
# panic when dropping dirty files, files should be flushed before hand
dirty-file-panic = []

# Performance optimizations
fat-cache = []              # Enable FAT sector caching (4KB default)
fat-cache-8k = ["fat-cache"]  # 8KB FAT cache (16 sectors)
fat-cache-16k = ["fat-cache"] # 16KB FAT cache (32 sectors)
multi-cluster-io = []       # Multi-cluster batched I/O (2-5x throughput, 16x less flash wear)
cluster-checkpoints = []    # Cluster chain checkpoints for O(log n) seeking
dir-cache = ["alloc"]       # Directory entry cache (requires HashMap)
cluster-bitmap = ["alloc"]  # Free cluster bitmap for O(1) allocation (10-100x faster, requires alloc)
cluster-bitmap-small = ["cluster-bitmap"]   # 1KB bitmap (8K clusters = 32MB @ 4KB, 256MB @ 32KB)
cluster-bitmap-medium = ["cluster-bitmap"]  # 4KB bitmap (32K clusters = 128MB @ 4KB, 1GB @ 32KB)
cluster-bitmap-large = ["cluster-bitmap"]   # 16KB bitmap (128K clusters = 512MB @ 4KB, 4GB @ 32KB)

# Safety features
transaction-safe = ["alloc", "dep:crc"]  # Power-loss resilience with two-phase commit (medical/automotive/aerospace)
file-locking = ["alloc"]      # Concurrent access protection (prevents corruption from multi-threaded writes)

# Threading support
send = []  # Add Send bounds to futures for multi-threaded executors (tokio::spawn)

# Async runtime selection (for optimal synchronization primitives)
runtime-generic = []  # Use async-lock (default, works everywhere - std and no_std)
runtime-tokio = ["dep:tokio"]  # Use tokio::sync primitives (optimized for tokio runtime)
# runtime-embassy = ["dep:embassy-sync"]  # Future: embassy-sync for embedded (not yet implemented)

# Time provider options
time-provider = ["dep:time"]  # Lightweight time provider using `time` crate
chrono-compat = ["dep:chrono"]  # For users who need chrono interop (backwards compatibility)
chrono = ["chrono-compat"]  # Backwards compatibility alias for chrono-compat

# Bundle presets for common use cases
embedded = ["alloc", "lfn", "fat-cache", "multi-cluster-io", "runtime-generic"]  # Core no_std features
desktop = ["std", "alloc", "lfn", "unicode", "log", "time-provider", "fat-cache", "multi-cluster-io", "cluster-bitmap-medium", "file-locking", "send", "runtime-tokio"]

# Default features - desktop-oriented with common optimizations
default = ["std", "alloc", "lfn", "unicode", "log", "time-provider", "fat-cache", "multi-cluster-io", "runtime-generic"]

[dependencies]
# core deps
bitflags = "2.10"
embedded-io-async = "0.7"
async-lock = "3.4"

# optional deps
embedded-io-adapters = { version = "0.7", package = "embedded-io-adapters", features = ["tokio-1"], optional = true }
chrono = { version = "0.4", default-features = false, features = ["clock"], optional = true }
time = { version = "0.3", default-features = false, features = ["local-offset"], optional = true }
tokio = { version = "1", default-features = false, optional = true }
elain = { version = "0.3", optional = true }
log = { version = "0.4", optional = true }
defmt = { version = "1.0", optional = true }
crc = { version = "3.4", default-features = false, optional = true }

[dev-dependencies]
env_logger = "0.11"
tokio = { version = "1", default-features = false, features = ["fs", "rt-multi-thread", "macros", "io-util", "sync"] }
futures = "0.3"
anyhow = "1"
fatrs-adapters-core = { path = "../fatrs-adapters-core", features = ["std"] }
fatrs-adapters-alloc = { path = "../fatrs-adapters-alloc" }
fatrs-block-device = { path = "../fatrs-block-device" }
aligned = "0.4.2"
embedded-io-adapters = { version = "0.7", features = ["tokio-1"] }

[[bench]]
name = "sequential_io"
harness = false

[[bench]]
name = "random_access"
harness = false

[[bench]]
name = "unbuffered_io"
harness = false

[[bench]]
name = "embassy_unbuffered"
harness = false

[[bench]]
name = "cluster_allocation"
harness = false

[[bench]]
name = "page_buffer"
harness = false

[[bench]]
name = "runtime_comparison"
harness = false

[[bench]]
name = "alloc_only_runtime"
harness = false
